# kth_drone

./: .gitignore  README.md  README.md~
KTH_drone/: CHANGELOG.rst  CMakeLists.txt~  package.xml
auto_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml
auto_teleop/cfg/: a_teleop.cfg
auto_teleop/src/: auto_teleop.cpp  auto_teleop.cpp.save
auto_teleop2/: CMakeLists.txt  CMakeLists.txt~  package.xml
auto_teleop2/cfg/: a_teleop.cfg  a_teleop.cfg~
auto_teleop2/src/: auto_teleop2.cpp
auto_vp/: CMakeLists.txt  CMakeLists.txt~  package.xml
auto_vp/src/: auto_vp.cpp
bonus_files/: posix_sitl_cage.launch
bonus_files/iris_cam/: iris_cam.sdf
cheap_simulator/: CMakeLists.txt  CMakeLists.txt~  package.xml
cheap_simulator/src/: cheap_simulator.cpp
circle_vp/: CMakeLists.txt  package.xml
circle_vp/action/: circular_view_points.action
circle_vp/src/: circle_vp.cpp
config/Primesens/: depth_PS1080_PrimeSense.yaml  rgb_PS1080_PrimeSense.yaml
data_compression/rosbag_openni_compression/launch/: record.launch
drone_launch/: drone_launch.launch  drone_launch.launch~
drone_model/: CMakeLists.txt  CMakeLists.txt~  package.xml
drone_model/launch/: SitL_autocontrol.launch  SitL_control.launch  SitL_control.launch~  SitL_default.launch  SitL_map_server.launch  SitL_setup.launch  SitL_setup.launch~  cage_autocontrol.launch  cage_control.launch  cage_setup.launch  cage_setup.launch~  drone_launch.launch  drone_launch_SitL.launch  drone_launch_SitL.launch~  state_publisher.launch  tf_tree.launch  tf_tree.launch~
drone_model/urdf/: kth_default.xml  sim_drone.xml
find_object/: CMakeLists.txt  package.xml
kth_drone/: CMakeLists.txt  package.xml
map_as_pointcloude/: CMakeLists.txt~  package.xml  package.xml~
map_as_pointcloude/launch/: octo.launch~
map_as_pointcloude/src/: cage_map_cloud.cpp
nbv_planning/: CMakeLists.txt  package.xml
nbv_planning/Igain/: .~lock.all_vp_05.txt#  .~lock.all_vp_data_01.txt#  .~lock.it_vp_data_01.txt#  .~lock.vp_01.txt#  .~lock.vp_04.txt#  all_vp_02.txt  all_vp_03.txt  all_vp_04.txt  all_vp_05.txt  all_vp_06.txt  data.txt  data_part02.txt  it_12_t1.txt  it_12_t1_the_one.txt  it_12_vp_stage_0.txt  it_18_t1.txt  it_18_t2.txt  it_18_t3.txt  it_18_t3_the_one.txt  it_18_t4.txt  it_18_t5.txt  it_1_t1.txt  it_1_t1_the_one.txt  it_3_t1.txt  it_3_t1_the_one.txt  it_6_t1.txt  it_6_t2.txt  it_6_t3.txt  it_6_t3_the_one.txt  it_t1.txt  it_t2.txt  it_t3.txt  it_t4.txt  it_t5.txt  it_t5_the_one.txt  vp_00.txt  vp_06.txt  vp_07.txt  vp_08.txt  vp_10.txt  (+7 more)
nbv_planning/Igain/old/: data.txt
nbv_planning/Igain/old/stage_0/: vp_04.txt  vp_05.txt  vp_09.txt  vp_13.txt  vp_14.txt  vp_22.txt
nbv_planning/Igain/old2/: it_vp_data_01.txt
nbv_planning/Igain/stage_0/: vp_01.txt  vp_02.txt  vp_03.txt  vp_12.txt  vp_18.txt  vp_21.txt
nbv_planning/action/: cloud_snapshoot.action  setpoint_control_commands.action
nbv_planning/include/nbv_planning/: NBVFinder.h  NBVFinderROS.h
nbv_planning/launch/: nbv_go.launch  nbv_prep.launch  nbv_prep_real.launch  tf_tree.launch
nbv_planning/src/: NBVFinder.cpp  NBVFinderROS.cpp  SensorModel.cpp  nbv_planner_drone.cpp  nbv_planner_pcds.cpp  nbv_planner_server.cpp
object_octo/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_octo/launch/: cloud_assamble.launch~  cloud_octo.launch
object_octo/src/: make_octomap_object.cpp
rviz_controll/: CMakeLists.txt  CMakeLists.txt~  package.xml
rviz_controll/src/: offb_node.cpp
rviz_teleop_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
rviz_teleop_plugin/src/: drive_widget.cpp  drive_widget.h  teleop_panel.cpp  teleop_panel.h
save_cloud/: CMakeLists.txt  package.xml
save_cloud/action/: take_cloud_snapshoot.action
save_cloud/src/: save_cloud.cpp
setpoint_control_remote/: CMakeLists.txt  package.xml
setpoint_control_remote/action/: cloud_snapshoot.action  setpoint_control_commands.action
setpoint_control_remote/src/: setpoint_remote.cpp  setpoint_remote.cpp.autosave
simple_vp/: CMakeLists.txt  CMakeLists.txt~  package.xml
simple_vp/cfg/: s_vp.cfg  s_vp.cfg~
simple_vp/launch/: simple_vp_launch.launch
simple_vp/src/: simple_vp.cpp
simulation_files/: cage.world
simulation_files/d_camera/: model.sdf
simulation_files/iris_cam/: model.config
teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml
teleop/src/: teleop.cpp
tf_pub/: CMakeLists.txt  package.xml
tf_pub/src/: drone_tf.cpp
