<package>
  <name>rviz_teleop_plugin</name>
  <version>0.0.3</version>
  <description>
     Teleop plugin for drone based on rviz tutorial.
  </description>
  <maintainer email="mwelle@kth.se">M welle</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>     
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
